<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ralf_schmitz"
    android:orientation="vertical"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/dancingpanda" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/poppins"
        android:text="Let's Get Started!"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_email_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SEmailContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:helperText="@string/require"
                app:helperTextTextColor="#E91E63">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSEmail"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SPswContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:helperText="@string/require"
                app:helperTextTextColor="#E91E63"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSPsw"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_password_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SConfirmPswContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:helperText="@string/require"
                app:helperTextTextColor="#E91E63"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSConfirmPsw"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <Button
            android:id="@+id/btnSSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_corner_button"
            android:backgroundTint="#B300B8D4"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingHorizontal="20dp"
            android:text="Create Account"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

    </LinearLayout>

</LinearLayout>