<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ralf_schmitz"
    android:orientation="vertical"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_marginVertical="40dp"
        app:srcCompat="@drawable/smilingpanda" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/poppins"
        android:text="Welcome Back! "
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_email_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LEmailContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:helperText="@string/require"
                app:helperTextTextColor="#E91E63">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLEmail"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_password_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LPswContainer"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:helperText="@string/require"
                app:helperTextTextColor="#E91E63"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLPsw"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <Button
            android:id="@+id/btnLSubmit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button"
            android:backgroundTint="#B300B8D4"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingHorizontal="20dp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />
    </LinearLayout>
</LinearLayout>